main/channel.c
@@ -10940,6 +10940,7 @@ AST_MUTEX_DEFINE_STATIC(channel_move_lock);
 
 int ast_channel_move(struct ast_channel *dest, struct ast_channel *source)
 {
+	RAII_VAR(struct ast_json *, blob, NULL, ast_json_unref);
 	SCOPED_MUTEX(lock, &channel_move_lock);
 
 	if (dest == source) {
@@ -10963,6 +10964,10 @@ int ast_channel_move(struct ast_channel *dest, struct ast_channel *source)
 
 	ast_channel_masq_set(dest, source);
 	ast_channel_masqr_set(source, dest);
+
+	blob = ast_json_pack("{s: s}",
+			"newchanneluniqueid", ast_channel_uniqueid(dest));
+	ast_channel_publish_blob(source, ast_channel_masquerade_type(), blob);
 
 	ast_channel_unlock(dest);
 	ast_channel_unlock(source);
